Tried a little fix to hide the address bar on mobile devices, but else it works well enough now

--- a/frontend/src/pages/MLBData/MLBData.scss
+++ b/frontend/src/pages/MLBData/MLBData.scss
@@ -3,7 +3,7 @@
   align-items: center;
   flex-direction: column;
   width: 100%;
-  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   text-align: center;
   overflow-y: auto;
   position: relative;
